Added all colleges with registerable courses to drop down

--- a/index.html
+++ b/index.html
@@ -16,8 +16,16 @@
             <option value="dent">DENT</option>
             <option value="aod">AOD</option>
             <option value="judo">JUDO</option>
-        </select>
-      <label for="fcrn">Course Number (CRN):</label><br>
+            <option value="aaas">AAAS</option>
+            <option value="adv">ADV</option>
+            <option value="bmsc">BMSC</option>
+            <option value="danc">DANC</option>
+            <option value="ps">PS</option>
+            <option value="sswg">SSWG</option>
+            <option value="srm">SRM</option>
+            <option value="fma">FMA</option>
+        </select><br>
+      <label for="fcrn">Course Number (CRN):</label>
         <input type="text" id="fcrn" name="fcrn" value="3296"><br><br>
       <input type="submit" value="Submit">
     </form>
