Renamed some variables to avoid confusion

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <option value="srm">SRM</option>
             <option value="fma">FMA</option>
         </select><br>
-      <label for="fcrn">Course Number (CRN):</label>
-        <input type="text" id="fcrn" name="fcrn" value="3296"><br><br>
+      <label for="fcrs">Course Number (CRN):</label>
+        <input type="text" id="fcrs" name="fcrs" value="3296"><br><br>
       <input type="submit" value="Submit">
     </form>
     {% endblock %}
